...

            <TextView
                style="@style/month_year_text_views"
                android:text="@string/month" />

            <EditText
                android:id="@+id/edit_text_month_year"
                style="@style/month_year_spinners"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </LinearLayout>

...
            <Spinner
                android:id="@+id/spinner_dst_port"
                style="@style/month_year_spinners" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_prices"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/get_prices" />
...
            <TextView
                style="@style/week_day_title"
                android:text="@string/sat" />
        </LinearLayout>

        <GridView
            android:id="@+id/grid_view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="@dimen/grid_view_price_horizontal_spacing"
            android:numColumns="7"
            android:stretchMode="columnWidth"
...
